--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,7 +15,7 @@ jobs:
       run: |
         pip install Faker
     - name: make all 
-      run: sudo ./autorun.sh  
+      run: ./autorun.sh  
     - name: Create Release
       uses: JasonEtco/upload-to-release@master
       with:
